--- a/index.html
+++ b/index.html
@@ -408,13 +408,35 @@
 <div class="title">
 <span class="f-right"><a href="http://www.vik-pernik.eu" class="ico-rss">ВИК Перник</a></span>
 <h4>ВАЖНО</h4><br/><br/>
-</div><div class="about_header">ЯЗ. СТУДЕНА</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br />Уважаеми потребители, 
-<br />Ръководството на „Водоснабдяване и канализация" ООД Перник ви уведомява, че към момента <u>водният обем на яз.Студена </u>е 21 485 000 куб.м при капацитет 25 519 100 куб.м. 
-<br />Отчетени са : <u>приток</u> – 969 л/сек. и  <u>разход</u> - 567 л/сек.
-<br />Специалисти на „В и К” дружеството извършват ежедневни замервания и наблюдения на водния поток и язовирната стена, съгласно 
-НАРЕДБА ЗА УСЛОВИЯТА И РЕДА ЗА ОСЪЩЕСТВЯВАНЕ НА ТЕХНИЧЕСКАТА И БЕЗОПАСНАТА ЕКСПЛОАТАЦИЯ НА ЯЗОВИРНИТЕ СТЕНИ И НА СЪОРЪЖЕНИЯТА КЪМ ТЯХ И ЗА ОСЪЩЕСТВЯВАНЕ НА КОНТРОЛ ЗА ТЕХНИЧЕСКОТО ИМ СЪСТОЯНИЕ
-В сила от 31.01.2020 г.
-<br /></div><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;23.10.2020, 08:22:35</div><br /><div class="about_header">Авария на ул."Миньор"!</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br />Уважаеми потребители,<br /><br />Уведомяваме Ви, че днес 22.10.2020г. поради  възникнала авария на ул."Миньор" при бл.20 в  17.00ч.  е спряно водоподаването за  живущите на  ул.“Миньор“, ул."Петко Каравелов" до пресечката с ул."Васил Левски", на хотел "Струма"  и СОУ "Д-р Петър Берон" .<br />Аварията  ще се отстранява на 23.10.2020г. от 08.30 часа.</div><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;22.10.2020, 17:16:51</div><br /><div class="about_header">Съобщение!</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br />Уважаеми потребители, <br /><br />Уведомяваме Ви, че поради успешно приключен първи етап от  строително-монтажните работи по реконструкцията на Пречиствателна станция за питейни води – Перник, <b>днес 22.10.2020г.<u> няма да се спира </u>водоподаването  от яз.Студена през нощта</b>, както беше  предварително обявено на сайта ни. <br /><br /> <b>Утре 23.10.2020г. (петък) продължават монтажните дейности </b>на Пречиствателна станция - Перник и ако се наложи спиране на водоподаването от яз.Студена през нощта от 22:00 до 06:00 часа, ще <b>бъдете уведомени в рамките на деня.<br /><br /></b>От ръководството <br /></div><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;22.10.2020, 15:42:47</div><br /><div style="clear:both;"><br/></div><div class="title">
+</div><div class="about_header">Яз.Студена</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br />Уважаеми потребители, 
+<br />
+<br />Ръководството на „Водоснабдяване и канализация" ООД Перник ви уведомява, че към момента водният обем на яз.Студена е 21 514 200 куб.м при капацитет 25 519 100 куб.м. 
+<br />Отчетени са : приток – 571 л/сек. и разход - 507 л/сек. 
+<br />Специалисти на „В и К” дружеството извършват ежедневни замервания и наблюдения на водния поток и язовирната стена, съгласно НАРЕДБА ЗА УСЛОВИЯТА И РЕДА ЗА ОСЪЩЕСТВЯВАНЕ НА ТЕХНИЧЕСКАТА И БЕЗОПАСНАТА ЕКСПЛОАТАЦИЯ НА ЯЗОВИРНИТЕ СТЕНИ И НА СЪОРЪЖЕНИЯТА КЪМ ТЯХ И ЗА ОСЪЩЕСТВЯВАНЕ НА КОНТРОЛ ЗА ТЕХНИЧЕСКОТО ИМ СЪСТОЯНИЕ В сила от 31.01.2020 г. </div><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;18.11.2020, 08:37:54</div><br /><div class="about_header">Съобщение!</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br />Уважаеми потребители,
+<br />
+<br />Ръководството на „Водоснабдяване и канализация“ ООД Перник ви уведомява, че от <b>29.10.2020г. инкасаторите на дружеството ще обхождат обектите си на място, но няма да влизат по домовете</b>, а ще записват отчетеното от вас  показание на водомерното устройство, с цел превенция от разпространение на Covid-19.
+<br /><b>Имате възможността  да извършвате също самоотчет и да го  предоставяте на инкасатора по телефон, чрез SMS или на следните телефони</b> по райони в рамките на работното време на дружеството от 08.00ч. до 16.30ч., като се спазват следните дати за отчет:
+<br />
+<br />• до 03-то число на месеца ще се приемат показания на водомера за градовете.
+<br />• до 12-то число на месеца ще се приемат показания на водомера за селата.
+<br />
+<br />„ВиК“ Перник – 076649812, 076649848, 076649849, 076649839
+<br />Район Мошино – 076670403
+<br />Район Църква – 076670532
+<br />Район Батановци – 077122361
+<br />Район Радомир – 077780050
+<br />Район Земен – 077412145
+<br />Район Брезник – 077512168
+<br />Район Трън - 077312287
+<br />
+<br />Начините на заплащане остават както до сега :
+<br />
+<br />• безкасово ( чрез електронно банкиране, по интернет чрез ePay).
+<br />• касово на всички каси на „ВиК“ Перник, които продължават да работят целодневно.<br />
+ <br />
+С цел превенция от разпространение на Covid-19, Водомерен сервиз при “ВиК“ Перник спира да приема заявки за монтаж и пломбиране на водомери до отмяна на временните противоепидемични мерки, въведени на територията на Република България.<br />
+<br />От ръководството
+<br /></div><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;29.10.2020, 16:13:13</div><br /><div style="clear:both;"><br/></div><div class="title">
 <span class="f-right"><a href="http://www.vik-pernik.eu/single.php?name=%CD%EE%E2%E8%ED%E8" class="ico-rss">Виж всички</a></span>
 <h4>НОВИНИ</h4><br/><br/>
 </div><div class="about_header">Ремонтите на ВиК мрежата в Перник пестят по 100 л/сек</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br /><img src="img/newsitem.png" alt="новини" width="20" align="left" style="margin:-4px 5px" />В последните месеци разходът на вода от язовир „Студена“ е намалял с около 100л/сек и в момента е 548 л/сек. Това се дължи основно на подменени водопроводи и извършени аварийни ремонти, което води до намаляване на водозагубите. 
@@ -434,7 +456,7 @@
 <br /></b><br /><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;21.05.2020, 15:55:30</div></div><br /><div style="clear:both;"><br/></div><div class="title">
 <span class="f-right"><a href="http://www.vik-pernik.eu/single.php?name=%D0%E5%EC%EE%ED%F2%ED%E8%20%E4%E5%E9%ED%EE%F1%F2%E8" class="ico-rss">Виж всички</a></span>
 <h4>РЕМОНТНИ ДЕЙНОСТИ</h4><br/><br/>
-</div><div class="about_header">Район Мошино</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br /><img src="img/repair.png" alt="ремонтни дейности" width="20" align="left" style="margin:-4px 5px" />Днес 23.10.2020г. ще се извършват ремонтни дейности на ул."Русе"№47 поради което ще бъде нарушено водоподаването до отстраняване на авариите. В с.Дивотино ;кв.Твърди ливади;на ул."Самоков" и на ул."Рашко Димитров" работят външни фирми, поради което ще бъде нарушено водоподаването до приключване на ремонтните дейности.<br /><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;23.10.2020, 08:27:47</div></div><br /><div class="about_header">Район Радомир</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br /><img src="img/repair.png" alt="ремонтни дейности" width="20" align="left" style="margin:-4px 5px" />Днес 23.10.2020г. ще се извършват ремонтни дейности в гр.Радомир ул."Александър Ботев" поради което ще бъде нарушено водоподаването до отстраняване на авариите.<br /><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;23.10.2020, 08:26:19</div></div><br /><div class="about_header">Район Могиличе</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br /><img src="img/repair.png" alt="ремонтни дейности" width="20" align="left" style="margin:-4px 5px" />Днес 23.10.2020г. ще се извършват ремонтни дейности на ул."Миньор" бл.20 поради което ще бъде нарушено водоподаването до отстраняване на авариите. На ул."Струма" работи външна фирма, поради което ще има нарушено водоподаване в рамките на деня. <br /><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;23.10.2020, 08:19:10</div></div><br /><!-- Temp News -->
+</div><div class="about_header">Район Радомир</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br /><img src="img/repair.png" alt="ремонтни дейности" width="20" align="left" style="margin:-4px 5px" />Днес 18.11.2020г. ще се извършват ремонтни дейности в гр.Радомир ул."Училищна";гр.Радомир кв.Гърляница , поради което ще бъде нарушено водоподаването до отстраняване на авариите.<br /><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;18.11.2020, 08:40:25</div></div><br /><div class="about_header">Район Църква</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br /><img src="img/repair.png" alt="ремонтни дейности" width="20" align="left" style="margin:-4px 5px" />Днес 18.11.2020г. ще се извършват ремонтни дейности  в с.Кладница ул."Витоша" и ул."Спас Бурнов";с.Кладница ул."Воденичище"с.Рударци ул"Рила"№3;с.Рударци ул."Несебър"№10 ,поради което ще бъде нарушено водоподаването до отстраняване на авариите.                                         <br /><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;18.11.2020, 08:34:40</div></div><br /><div class="about_header">Район Мошино</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br /><img src="img/repair.png" alt="ремонтни дейности" width="20" align="left" style="margin:-4px 5px" />Днес 18.11.2020г. ще се извършват ремонтни дейности на ул."Младен Стоянов"бл.№16;ул."Благой Гебрев"бл.№64 .В с.Дивотино и на ул."Младен Стоянов" работят външни фирми, поради което ще бъде нарушено водоподаването до приключване на ремонтните дейности.<br /><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;18.11.2020, 08:31:55</div></div><br /><!-- Temp News -->
 <br /><br />
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
 							<tr>
