regular db commit

--- a/index.html
+++ b/index.html
@@ -408,35 +408,17 @@
 <div class="title">
 <span class="f-right"><a href="http://www.vik-pernik.eu" class="ico-rss">ВИК Перник</a></span>
 <h4>ВАЖНО</h4><br/><br/>
-</div><div class="about_header">Яз.Студена</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br />Уважаеми потребители, 
+</div><div class="about_header">Съобщение!</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br />Уважаеми потребители,<br /> <br />Уведомяваме Ви, че днес 02.12.2020г.  <b>ще се изгражда водопроводната връзка на ул.“Никола Козлев“ и ул.“Хр.Ясенов“ в кв.Могиличе, поради което от 12:00 часа ще бъде спряно водоподаването  в този район</b>. След приключване на строително-монтажните дейности, водоподаването ще бъде възстановено.<br /><br />От ръководството<br /></div><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;02.12.2020, 12:03:32</div><br /><div class="about_header">Яз.Студена</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br />Уважаеми потребители, 
 <br />
-<br />Ръководството на „Водоснабдяване и канализация" ООД Перник ви уведомява, че към момента водният обем на яз.Студена е 21 412 300 куб.м при капацитет 25 519 100 куб.м. 
-<br />Отчетени са : приток – 278 л/сек. и разход - 552л/сек. 
-<br />Специалисти на „В и К” дружеството извършват ежедневни замервания и наблюдения на водния поток и язовирната стена, съгласно НАРЕДБА ЗА УСЛОВИЯТА И РЕДА ЗА ОСЪЩЕСТВЯВАНЕ НА ТЕХНИЧЕСКАТА И БЕЗОПАСНАТА ЕКСПЛОАТАЦИЯ НА ЯЗОВИРНИТЕ СТЕНИ И НА СЪОРЪЖЕНИЯТА КЪМ ТЯХ И ЗА ОСЪЩЕСТВЯВАНЕ НА КОНТРОЛ ЗА ТЕХНИЧЕСКОТО ИМ СЪСТОЯНИЕ В сила от 31.01.2020 г. </div><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;24.11.2020, 08:19:50</div><br /><div class="about_header">Съобщение!</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br />Уважаеми потребители,
+<br />Ръководството на „Водоснабдяване и канализация" ООД Перник ви уведомява, че към момента водният обем на яз.Студена е 21 282 100 куб.м при капацитет 25 519 100 куб.м. 
+<br />Отчетени са : приток – 472 л/сек. и разход - 576л/сек. 
+<br />Специалисти на „В и К” дружеството извършват ежедневни замервания и наблюдения на водния поток и язовирната стена, съгласно НАРЕДБА ЗА УСЛОВИЯТА И РЕДА ЗА ОСЪЩЕСТВЯВАНЕ НА ТЕХНИЧЕСКАТА И БЕЗОПАСНАТА ЕКСПЛОАТАЦИЯ НА ЯЗОВИРНИТЕ СТЕНИ И НА СЪОРЪЖЕНИЯТА КЪМ ТЯХ И ЗА ОСЪЩЕСТВЯВАНЕ НА КОНТРОЛ ЗА ТЕХНИЧЕСКОТО ИМ СЪСТОЯНИЕ В сила от 31.01.2020 г. </div><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;02.12.2020, 08:16:38</div><br /><div class="about_header">Съобщение !!!</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br />Уважаеми потребители, 
 <br />
-<br />Ръководството на „Водоснабдяване и канализация“ ООД Перник ви уведомява, че от <b>29.10.2020г. инкасаторите на дружеството ще обхождат обектите си на място, но няма да влизат по домовете</b>, а ще записват отчетеното от вас  показание на водомерното устройство, с цел превенция от разпространение на Covid-19.
-<br /><b>Имате възможността  да извършвате също самоотчет и да го  предоставяте на инкасатора по телефон, чрез SMS или на следните телефони</b> по райони в рамките на работното време на дружеството от 08.00ч. до 16.30ч., като се спазват следните дати за отчет:
+<br />Уведомяваме Ви, че поради  възникнала авария на ул."Мърквичка" при бл.38 в кв.Твърди ливади, <b>днес 01.12.2020г. в  19.00 часа  е спряно водоподаването за кв.Твърди ливади и част от ул."Св. Св. Кирил и Методий".</b>
+<br />Аварията  ще се отстранява на 02.12.2020г. от 08.30часа. 
 <br />
-<br />• до 03-то число на месеца ще се приемат показания на водомера за градовете.
-<br />• до 12-то число на месеца ще се приемат показания на водомера за селата.
-<br />
-<br />„ВиК“ Перник – 076649812, 076649848, 076649849, 076649839
-<br />Район Мошино – 076670403
-<br />Район Църква – 076670532
-<br />Район Батановци – 077122361
-<br />Район Радомир – 077780050
-<br />Район Земен – 077412145
-<br />Район Брезник – 077512168
-<br />Район Трън - 077312287
-<br />
-<br />Начините на заплащане остават както до сега :
-<br />
-<br />• безкасово ( чрез електронно банкиране, по интернет чрез ePay).
-<br />• касово на всички каси на „ВиК“ Перник, които продължават да работят целодневно.<br />
- <br />
-С цел превенция от разпространение на Covid-19, Водомерен сервиз при “ВиК“ Перник спира да приема заявки за монтаж и пломбиране на водомери до отмяна на временните противоепидемични мерки, въведени на територията на Република България.<br />
 <br />От ръководството
-<br /></div><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;29.10.2020, 16:13:13</div><br /><div style="clear:both;"><br/></div><div class="title">
+<br /></div><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;01.12.2020, 20:07:08</div><br /><div style="clear:both;"><br/></div><div class="title">
 <span class="f-right"><a href="http://www.vik-pernik.eu/single.php?name=%CD%EE%E2%E8%ED%E8" class="ico-rss">Виж всички</a></span>
 <h4>НОВИНИ</h4><br/><br/>
 </div><div class="about_header">Ремонтите на ВиК мрежата в Перник пестят по 100 л/сек</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br /><img src="img/newsitem.png" alt="новини" width="20" align="left" style="margin:-4px 5px" />В последните месеци разходът на вода от язовир „Студена“ е намалял с около 100л/сек и в момента е 548 л/сек. Това се дължи основно на подменени водопроводи и извършени аварийни ремонти, което води до намаляване на водозагубите. 
@@ -456,7 +438,7 @@
 <br /></b><br /><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;21.05.2020, 15:55:30</div></div><br /><div style="clear:both;"><br/></div><div class="title">
 <span class="f-right"><a href="http://www.vik-pernik.eu/single.php?name=%D0%E5%EC%EE%ED%F2%ED%E8%20%E4%E5%E9%ED%EE%F1%F2%E8" class="ico-rss">Виж всички</a></span>
 <h4>РЕМОНТНИ ДЕЙНОСТИ</h4><br/><br/>
-</div><div class="about_header">Район Радомир</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br /><img src="img/repair.png" alt="ремонтни дейности" width="20" align="left" style="margin:-4px 5px" />Днес 24.11.2020г. ще се извършват ремонтни дейности в с.Гълъбник;с.Старо село;с.Владимир поради което ще бъде нарушено водоподаването до отстраняване на авариите.<br /><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;24.11.2020, 08:24:48</div></div><br /><div class="about_header">Район Мошино</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br /><img src="img/repair.png" alt="ремонтни дейности" width="20" align="left" style="margin:-4px 5px" />Днес 24.11.2020г. ще се извършват ремонтни дейности в кв.Стара Тева №20,с.Дивотино ул."Миньор"№105;ул."Кърджали"№50 поради което ще бъде нарушено водоподаването до отстраняване на авариите. В с.Дивотино и на ул."Младен Стоянов" в кв.Мошино, работят външни фирми, поради което ще има нарушено водоподаване в рамките на деня. <br /><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;24.11.2020, 08:19:04</div></div><br /><div class="about_header">Район Могиличе</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br /><img src="img/repair.png" alt="ремонтни дейности" width="20" align="left" style="margin:-4px 5px" />Днес 24.11.2020г. ще се извършват ремонтни на ул.Връх Богдан"№8;ул."Витоша"№75. На ул."Витоша" и ул."Струма" работят външни фирми, поради което ще има нарушено водоподаване в рамките на деня.   <br /><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;24.11.2020, 08:14:37</div></div><br /><!-- Temp News -->
+</div><div class="about_header">Район Могиличе</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br /><img src="img/repair.png" alt="ремонтни дейности" width="20" align="left" style="margin:-4px 5px" />Днес 02.12.2020г. ще се извършват ремонтни дейности на ул."Стефан Караджа" На ул."Витоша" и ул."Струма" работят външни фирми, поради което ще има нарушено водоподаване в рамките на деня.   <br /><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;02.12.2020, 08:15:32</div></div><br /><div class="about_header">Район Мошино</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br /><img src="img/repair.png" alt="ремонтни дейности" width="20" align="left" style="margin:-4px 5px" />Днес 02.12.2020г. ще се извършват ремонтни дейности на ул."Мърквичка"бл.38 поради което ще бъде нарушено водоподаването до отстраняване на авариите. В с.Дивотино и на ул."Младен Стоянов" в кв.Мошино, работят външни фирми, поради което ще има нарушено водоподаване в рамките на деня. <br /><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;02.12.2020, 08:14:36</div></div><br /><div class="about_header">Район Църква</div><div class="hr">&nbsp;</div><div class="about_post" align="justify"><br /><img src="img/repair.png" alt="ремонтни дейности" width="20" align="left" style="margin:-4px 5px" />Днес 02.12.2020г. ще се извършват ремонтни дейности  в кв.Църква-при резервоара, с.Студена местност "Св.Илия", поради което ще бъде нарушено водоподаването до отстраняване на авариите.                                         <br /><br /><div align='right' style='font-size: 11px'>...&nbsp;<strong>Публикувано на:</strong>&nbsp;02.12.2020, 08:10:23</div></div><br /><!-- Temp News -->
 <br /><br />
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
 							<tr>
